# p3-besoins-batiments

./: P3_template_modelistation_supervisee_data_scientist (1).ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: P3_template_modelistation_supervisee_data_scientist (1)-checkpoint.ipynb
